force-app/main/default/objects/ZQuote_History__c/ZQuote_History__c.object-meta.xml
<CustomObject>
    <label>ZQuote History</label>
    <nameField>
        <displayFormat>ZQH-{0000}</displayFormat>
        <label>ZQuote History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZQuote History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>