force-app/main/default/objects/ZQuote_History__c/fields/Change_Description__c.field-meta.xml
<CustomField>
    <fullName>Change_Description__c</fullName>
    <label>Action</label>
    <type>TextArea</type>
</CustomField>