force-app/main/default/objects/ZQuote_History__c/fields/Changed_by__c.field-meta.xml
<CustomField>
    <fullName>Changed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ZQuote_History</relationshipName>
    <type>Lookup</type>
</CustomField>