force-app/main/default/objects/ZQuote_History__c/fields/Field_Changed__c.field-meta.xml
<CustomField>
    <fullName>Field_Changed__c</fullName>
    <label>Field Changed</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>