force-app/main/default/objects/ZQuote_History__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>zqu__Quote__c</referenceTo>
    <relationshipLabel>ZQuote History</relationshipLabel>
    <relationshipName>ZQuote_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>