force-app/main/default/objects/ZQuote_History__c/fields/Time_of_change__c.field-meta.xml
<CustomField>
    <fullName>Time_of_change__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>